--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -25,3 +25,11 @@ body {
 	width: 100%;
 	height: 100%;
 }
+
+.mindmap-board {
+	position: absolute;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100%;
+}
