One topic highlighting

--- a/src/topic/styles/topic.css
+++ b/src/topic/styles/topic.css
@@ -17,6 +17,10 @@
 	border-color: yellow;
 }
 
+.topic.selected {
+	border-color: yellow;
+}
+
 .topic-children-container {
 	position: absolute;
 }
