--- a/src/topic/styles/topic.css
+++ b/src/topic/styles/topic.css
@@ -47,3 +47,17 @@
 	opacity: 0.6;
 	z-index: 999;
 }
+
+.topic-drop-area {
+	position: absolute;
+	left: 0px;
+	top: 0px;
+	border: 3px solid blueviolet;
+	width: calc(100% + 30px);
+	height: 100%;
+	pointer-events: none;
+}
+
+/* .topic-drop-area {
+
+} */
